Src/Main/MetaDslx.Compiler/MetaModel/MetaModelParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MetaModelParser.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace MetaDslx.Compiler {

using MetaDslx.Core;

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class MetaModelParser : Parser {
	public const int
		KNamespace=1, KUsing=2, KMetamodel=3, KAbstract=4, KClass=5, KEnum=6, 
		KAssociation=7, KContainment=8, KWith=9, KNull=10, KTrue=11, KFalse=12, 
		KVoid=13, KObject=14, KString=15, KInt=16, KLong=17, KFloat=18, KDouble=19, 
		KByte=20, KBool=21, KList=22, KAny=23, KNone=24, KSet=25, KMultiList=26, 
		KMultiSet=27, KThis=28, KTypeof=29, KAs=30, KIs=31, KBase=32, KConst=33, 
		KRedefines=34, KSubsets=35, KReadonly=36, KLazy=37, KSynthetized=38, KInherited=39, 
		KDerived=40, KStatic=41, TSemicolon=42, TColon=43, TDot=44, TComma=45, 
		TAssign=46, TOpenParen=47, TCloseParen=48, TOpenBracket=49, TCloseBracket=50, 
		TOpenBrace=51, TCloseBrace=52, TLessThan=53, TGreaterThan=54, TQuestion=55, 
		TQuestionQuestion=56, TAmpersand=57, THat=58, TBar=59, TAndAlso=60, TOrElse=61, 
		TPlusPlus=62, TMinusMinus=63, TPlus=64, TMinus=65, TTilde=66, TExclamation=67, 
		TSlash=68, TAsterisk=69, TPercent=70, TLessThanOrEqual=71, TGreaterThanOrEqual=72, 
		TEqual=73, TNotEqual=74, TAsteriskAssign=75, TSlashAssign=76, TPercentAssign=77, 
		TPlusAssign=78, TMinusAssign=79, TLeftShiftAssign=80, TRightShiftAssign=81, 
		TAmpersandAssign=82, THatAssign=83, TBarAssign=84, IdentifierNormal=85, 
		IntegerLiteral=86, DecimalLiteral=87, ScientificLiteral=88, DateTimeOffsetLiteral=89, 
		DateTimeLiteral=90, DateLiteral=91, TimeLiteral=92, RegularStringLiteral=93, 
		GuidLiteral=94, UTF8BOM=95, WHITESPACE=96, CRLF=97, LINEBREAK=98, LINE_COMMENT=99, 
		COMMENT=100;
	public const int
		RULE_main = 0, RULE_qualifiedName = 1, RULE_identifierList = 2, RULE_qualifiedNameList = 3, 
		RULE_annotation = 4, RULE_namespaceDeclaration = 5, RULE_metamodelDeclaration = 6, 
		RULE_declaration = 7, RULE_enumDeclaration = 8, RULE_enumValues = 9, RULE_enumValue = 10, 
		RULE_enumMemberDeclaration = 11, RULE_classDeclaration = 12, RULE_classAncestors = 13, 
		RULE_classAncestor = 14, RULE_classMemberDeclaration = 15, RULE_fieldDeclaration = 16, 
		RULE_fieldModifier = 17, RULE_redefinitions = 18, RULE_subsettings = 19, 
		RULE_nameUseList = 20, RULE_constDeclaration = 21, RULE_returnType = 22, 
		RULE_typeOfReference = 23, RULE_typeReference = 24, RULE_simpleType = 25, 
		RULE_objectType = 26, RULE_primitiveType = 27, RULE_voidType = 28, RULE_invisibleType = 29, 
		RULE_nullableType = 30, RULE_collectionType = 31, RULE_collectionKind = 32, 
		RULE_operationDeclaration = 33, RULE_parameterList = 34, RULE_parameter = 35, 
		RULE_constructorDeclaration = 36, RULE_initializerDeclaration = 37, RULE_synthetizedPropertyInitializer = 38, 
		RULE_inheritedPropertyInitializer = 39, RULE_argumentList = 40, RULE_expression = 41, 
		RULE_postOperator = 42, RULE_preOperator = 43, RULE_unaryOperator = 44, 
		RULE_multiplicativeOperator = 45, RULE_additiveOperator = 46, RULE_shiftOperator = 47, 
		RULE_comparisonOperator = 48, RULE_equalityOperator = 49, RULE_assignmentOperator = 50, 
		RULE_associationDeclaration = 51, RULE_identifier = 52, RULE_literal = 53, 
		RULE_nullLiteral = 54, RULE_booleanLiteral = 55, RULE_integerLiteral = 56, 
		RULE_decimalLiteral = 57, RULE_scientificLiteral = 58, RULE_stringLiteral = 59;
	public static readonly string[] ruleNames = {
		"main", "qualifiedName", "identifierList", "qualifiedNameList", "annotation", 
		"namespaceDeclaration", "metamodelDeclaration", "declaration", "enumDeclaration", 
		"enumValues", "enumValue", "enumMemberDeclaration", "classDeclaration", 
		"classAncestors", "classAncestor", "classMemberDeclaration", "fieldDeclaration", 
		"fieldModifier", "redefinitions", "subsettings", "nameUseList", "constDeclaration", 
		"returnType", "typeOfReference", "typeReference", "simpleType", "objectType", 
		"primitiveType", "voidType", "invisibleType", "nullableType", "collectionType", 
		"collectionKind", "operationDeclaration", "parameterList", "parameter", 
		"constructorDeclaration", "initializerDeclaration", "synthetizedPropertyInitializer", 
		"inheritedPropertyInitializer", "argumentList", "expression", "postOperator", 
		"preOperator", "unaryOperator", "multiplicativeOperator", "additiveOperator", 
		"shiftOperator", "comparisonOperator", "equalityOperator", "assignmentOperator", 
		"associationDeclaration", "identifier", "literal", "nullLiteral", "booleanLiteral", 
		"integerLiteral", "decimalLiteral", "scientificLiteral", "stringLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'using'", "'metamodel'", "'abstract'", "'class'", 
		"'enum'", "'association'", "'containment'", "'with'", "'null'", "'true'", 
		"'false'", "'void'", "'object'", "'string'", "'int'", "'long'", "'float'", 
		"'double'", "'byte'", "'bool'", "'list'", "'any'", "'none'", "'set'", 
		"'multi_list'", "'multi_set'", "'this'", "'typeof'", "'as'", "'is'", "'base'", 
		"'const'", "'redefines'", "'subsets'", "'readonly'", "'lazy'", "'synthetized'", 
		"'inherited'", "'derived'", "'static'", "';'", "':'", "'.'", "','", "'='", 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'?'", "'??'", 
		"'&'", "'^'", "'|'", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'~'", 
		"'!'", "'/'", null, "'%'", "'<='", "'>='", "'=='", "'!='", "'*='", "'/='", 
		"'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KNamespace", "KUsing", "KMetamodel", "KAbstract", "KClass", "KEnum", 
		"KAssociation", "KContainment", "KWith", "KNull", "KTrue", "KFalse", "KVoid", 
		"KObject", "KString", "KInt", "KLong", "KFloat", "KDouble", "KByte", "KBool", 
		"KList", "KAny", "KNone", "KSet", "KMultiList", "KMultiSet", "KThis", 
		"KTypeof", "KAs", "KIs", "KBase", "KConst", "KRedefines", "KSubsets", 
		"KReadonly", "KLazy", "KSynthetized", "KInherited", "KDerived", "KStatic", 
		"TSemicolon", "TColon", "TDot", "TComma", "TAssign", "TOpenParen", "TCloseParen", 
		"TOpenBracket", "TCloseBracket", "TOpenBrace", "TCloseBrace", "TLessThan", 
		"TGreaterThan", "TQuestion", "TQuestionQuestion", "TAmpersand", "THat", 
		"TBar", "TAndAlso", "TOrElse", "TPlusPlus", "TMinusMinus", "TPlus", "TMinus", 
		"TTilde", "TExclamation", "TSlash", "TAsterisk", "TPercent", "TLessThanOrEqual", 
		"TGreaterThanOrEqual", "TEqual", "TNotEqual", "TAsteriskAssign", "TSlashAssign", 
		"TPercentAssign", "TPlusAssign", "TMinusAssign", "TLeftShiftAssign", "TRightShiftAssign", 
		"TAmpersandAssign", "THatAssign", "TBarAssign", "IdentifierNormal", "IntegerLiteral", 
		"DecimalLiteral", "ScientificLiteral", "DateTimeOffsetLiteral", "DateTimeLiteral", 
		"DateLiteral", "TimeLiteral", "RegularStringLiteral", "GuidLiteral", "UTF8BOM", 
		"WHITESPACE", "CRLF", "LINEBREAK", "LINE_COMMENT", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MetaModelParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MetaModelParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class MainContext : ParserRuleContext {
		public NamespaceDeclarationContext[] namespaceDeclaration() {
			return GetRuleContexts<NamespaceDeclarationContext>();
		}
		public NamespaceDeclarationContext namespaceDeclaration(int i) {
			return GetRuleContext<NamespaceDeclarationContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaModelParserVisitor<TResult> typedVisitor = visitor as IMetaModelParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==KNamespace || _la==TOpenBracket) {
				{
				{
				State = 120; namespaceDeclaration();
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedNameContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] TDot() { return GetTokens(MetaModelParser.TDot); }
		public ITerminalNode TDot(int i) {
			return GetToken(MetaModelParser.TDot, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.EnterQualifiedName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.ExitQualifiedName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaModelParserVisitor<TResult> typedVisitor = visitor as IMetaModelParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedNameContext qualifiedName() {
		QualifiedNameContext _localctx = new QualifiedNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_qualifiedName);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; identifier();
			State = 131;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 127; Match(TDot);
					State = 128; identifier();
					}
					} 
				}
				State = 133;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierListContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] TComma() { return GetTokens(MetaModelParser.TComma); }
		public ITerminalNode TComma(int i) {
			return GetToken(MetaModelParser.TComma, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifierList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.EnterIdentifierList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.ExitIdentifierList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaModelParserVisitor<TResult> typedVisitor = visitor as IMetaModelParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierListContext identifierList() {
		IdentifierListContext _localctx = new IdentifierListContext(Context, State);
		EnterRule(_localctx, 4, RULE_identifierList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; identifier();
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TComma) {
				{
				{
				State = 135; Match(TComma);
				State = 136; identifier();
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedNameListContext : ParserRuleContext {
		public QualifiedNameContext[] qualifiedName() {
			return GetRuleContexts<QualifiedNameContext>();
		}
		public QualifiedNameContext qualifiedName(int i) {
			return GetRuleContext<QualifiedNameContext>(i);
		}
		public ITerminalNode[] TComma() { return GetTokens(MetaModelParser.TComma); }
		public ITerminalNode TComma(int i) {
			return GetToken(MetaModelParser.TComma, i);
		}
		public QualifiedNameListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedNameList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.EnterQualifiedNameList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.ExitQualifiedNameList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaModelParserVisitor<TResult> typedVisitor = visitor as IMetaModelParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedNameList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedNameListContext qualifiedNameList() {
		QualifiedNameListContext _localctx = new QualifiedNameListContext(Context, State);
		EnterRule(_localctx, 6, RULE_qualifiedNameList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142; qualifiedName();
			State = 147;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TComma) {
				{
				{
				State = 143; Match(TComma);
				State = 144; qualifiedName();
				}
				}
				State = 149;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationContext : ParserRuleContext {
		public ITerminalNode TOpenBracket() { return GetToken(MetaModelParser.TOpenBracket, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode TCloseBracket() { return GetToken(MetaModelParser.TCloseBracket, 0); }
		public AnnotationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotation; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.EnterAnnotation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.ExitAnnotation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaModelParserVisitor<TResult> typedVisitor = visitor as IMetaModelParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnnotation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AnnotationContext annotation() {
		AnnotationContext _localctx = new AnnotationContext(Context, State);
		EnterRule(_localctx, 8, RULE_annotation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150; Match(TOpenBracket);
			State = 151; identifier();
			State = 152; Match(TCloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceDeclarationContext : ParserRuleContext {
		public ITerminalNode KNamespace() { return GetToken(MetaModelParser.KNamespace, 0); }
		public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		public ITerminalNode TAssign() { return GetToken(MetaModelParser.TAssign, 0); }
		public StringLiteralContext stringLiteral() {
			return GetRuleContext<StringLiteralContext>(0);
		}
		public ITerminalNode TOpenBrace() { return GetToken(MetaModelParser.TOpenBrace, 0); }
		public ITerminalNode TCloseBrace() { return GetToken(MetaModelParser.TCloseBrace, 0); }
		public AnnotationContext[] annotation() {
			return GetRuleContexts<AnnotationContext>();
		}
		public AnnotationContext annotation(int i) {
			return GetRuleContext<AnnotationContext>(i);
		}
		public MetamodelDeclarationContext[] metamodelDeclaration() {
			return GetRuleContexts<MetamodelDeclarationContext>();
		}
		public MetamodelDeclarationContext metamodelDeclaration(int i) {
			return GetRuleContext<MetamodelDeclarationContext>(i);
		}
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.EnterNamespaceDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMetaModelParserListener typedListener = listener as IMetaModelParserListener;
			if (typedListener != null) typedListener.ExitNamespaceDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMetaModelParserVisitor<TResult> typedVisitor = visitor as IMetaModelParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceDeclarationContext namespaceDeclaration() {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_namespaceDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TOpenBracket) {
				{
				{
				State = 154; annotation();
				}
				}
				State = 159;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 160; Match(KNamespace);
			State = 161; qualifiedName();
			State = 162; Match(TAssign);
			State = 163; stringLiteral();
			State = 164; Match(TOpenBrace);
			State = 168;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==KMetamodel || _la==TOpenBracket) {
				{
				{
				State = 165; metamodelDeclaration();
				}
				}
				State = 170;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 171; Match(TCloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MetamodelDeclarationContext : ParserRuleContext {
		public ITerminalNode KMetamodel() { return GetToken(MetaModelParser.KMetamodel, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode TOpenBrace() { return GetToken(MetaModelParser.TOpenBrace, 0); }
		public ITerminalNode TCloseBrace() { return GetToken(MetaModelParser.TCloseBrace, 0); }
		public AnnotationContext[] annotation() {
			return GetRuleContexts<AnnotationContext>();
		}
		public AnnotationContext annotation(int i) {
			return GetRuleContext<AnnotationContext>(i);
		}
		public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public MetamodelDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
